added functionality to the nav bar links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href = "#SEO">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href = "#ORM">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href = "#SMM">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
     <!-- Section Semantic Tag -->
     <section>
         <!-- Article Semantic Tag -->
-        <article>
+        <article id="SEO">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO image" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -41,7 +41,7 @@
             </p>
         </article>
 
-        <article>
+        <article id = "ORM">
             <img src="./assets/images/online-reputation-management.jpg" alt="reputation image" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
             </p>
         </article>
 
-        <article>
+        <article id = "SMM">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media image" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
